--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 <body>
    <div class="outer">
     <br>
-    <h1>Resume</h1>
+    <h1 style="background-color: rgb(214, 214, 134);;">Resume</h1>
     <br>
      <table>
        <tr>
-        <td><img  width="130px" height="150px" src="talha.png" alt="Loading profile image"></td>
+        <td><img  width="130px" height="170px" src="talha.png" alt="Loading profile image"></td>
         <td><h1 class="heading1">Talha Sajjad</h1>
-            <h2 class="heading2"><i>objective:</i></h2>
+            <h2 class="border"><i>Objective:-</i></h2>
             <p class="pargrph1">I am a passionate and experienced mobile and web app developer with a proven track record of
                 success in developing and delivering high-quality applications. I am proficient in a variety of
                 programming languages and technologies, including Java, Python, JavaScript, React, and Swift. I am
                 also skilled in UX/UI design and have a strong understanding of the mobile and web app development
                 process. I am seeking a challenging and rewarding position in a mobile or web app development
-                company where I can use my skills and experience to make a significant impact</p>
+                company where I can use my skills and experience to make a significant impact.</p>
         </td>
        </tr>
      </table>
@@ -79,7 +79,7 @@
         <i>Project</i>
       </div>
       <br>
-      <p class="pr">Cecos University Student Management System(fyp)
+      <p class="pr">Infoskytechsolutions
     </p>
     <br>
     <div class="border">
